--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3235,7 +3235,7 @@ input, select, textarea {
 			height: 100%;
 			background-color: #212931;
 			background-image: linear-gradient(0deg, rgba(15, 0, 0, 0.4), rgba(25, 0, 0, 0.7)), url("./../../images/fondo.jpg");
-			background-size: auto,								contain,													cover;
+			background-size: 	cover;
 			background-position: center,								top,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
 			background-attachment: scroll,								scroll,														scroll;
@@ -3244,8 +3244,8 @@ input, select, textarea {
 
 			#wrapper > .bg.fixed {
 				position: fixed;
-				width: 100vw;
-				height: 100vh;
+				width: 100%;
+				height: 100%;
 			}
 
 		#wrapper.fade-in:before {
@@ -3276,7 +3276,7 @@ input, select, textarea {
 		@media screen and (orientation: portrait) {
 
 			#wrapper > .bg {
-				background-size: auto,								auto,														auto 175%;
+				background-size: contain;
 			}
 
 		}
