--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3276,7 +3276,7 @@ input, select, textarea {
 		@media screen and (orientation: portrait) {
 
 			#wrapper > .bg {
-				background-size: contain;
+				background-size: cover;
 			}
 
 		}
